--- a/style.css
+++ b/style.css
@@ -24,9 +24,12 @@ body {
     text-align: center;
     box-shadow:  0 0 20px rgba(0, 255, 255, 0.2);
 }
+
 .card img:hover {
-  transform: scale(1.5);
+  transform: scale(1.3);
+    transition: transform 0.3s ease;
 }
+
 .profile-img {
   width: 100px;
   height: 100px;
@@ -90,5 +93,6 @@ body {
 }
 
 .socials img:hover {
-  transform: scale(1.1);
+  transform: scale(1.2);
+        transition: transform 0.3s ease;
 }
