--- a/style.css
+++ b/style.css
@@ -6,23 +6,48 @@
 }
 
 body {
-    background-color: #0d1117;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    padding: 20px;
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding: 10px;
+  overflow: hidden;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250%;
+  height: 250%;
+background: url('https://www.transparenttextures.com/patterns/stardust.png') repeat;
+  background-size: contain;
+  animation: moveStars 100s linear infinite;
+  opacity: 0.5;
+  z-index: -1;
+}
+
+@keyframes moveStars {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-500px);
+  }
 }
 
 .card {
-    background-color: #161b22;
+    background-color: rgba(22, 27, 34, 0.637); /* más transparente */
     border-radius: 16px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(124, 196, 230, 0.527);
     padding: 24px;
     width: 400px;
     text-align: center;
-    box-shadow:  0 0 20px rgba(0, 255, 255, 0.2);
+    z-index: 10;
+    position: relative;
 }
 
 .card img:hover {
