--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 90vh;
-  padding: 10px;
+    height: auto;
+    padding: 40px;
   overflow: hidden;
 }
 
