--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-    height: auto;
-    padding: 40px;
+    height: 96vh;
+    padding: 39px;
   overflow: hidden;
 }
 
