--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
- min-height: 100vh; 
+ min-height: 80vh; 
   padding: 39px;
   overflow: hidden;
+  position: relative;
  
 }
 
