--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ h2 {
     background-color: #58e6ff59;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 500px), screen and (max-width: 768px) {
     .card {
         width: 82%; /* Ajustar el ancho de la tarjeta en pantallas más pequeñas */
         padding: 28px; /* Reducir el padding */
@@ -166,3 +166,18 @@ h2 {
         font-size: 12px;
     }
 }
+
+    .profile-img {
+        width: 80px;
+        height: 80px;
+    }
+    h2 {
+        font-size: 20px;
+    }
+    .subtitle {
+        font-size: 16px;
+    }
+    .description {
+        font-size: 12px;
+    }
+
