--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ h2 {
 
 @media screen and (max-width: 500px), screen and (max-width: 768px) {
     .card {
-        width: 90%; /* Ajustar el ancho de la tarjeta en pantallas más pequeñas */
+        width: 338px; /* Ajustar el ancho de la tarjeta en pantallas más pequeñas */
         padding: 6.4%; /* Reducir el padding */
     }
     .profile-img {
