--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ body::before {
   left: 0;
   width: 250%;
   height: 250%;
-  background: url("https://www.transparenttextures.com/patterns/stardust.png")
-    repeat;
+  background: url("https://www.transparenttextures.com/patterns/stardust.png") repeat;
   background-size: contain;
   animation: moveStars 100s linear infinite;
   z-index: -1;
@@ -57,8 +56,8 @@ body::before {
 }
 
 .card img:hover {
-  transform: scale(1.3);
-  transition: transform 0.3s ease;
+  transform: scale(1.2); /* Escala la imagen al pasar el cursor */
+transition: transform 0.3s cubic-bezier(0.4, 0, 1, 1);
 }
 
 .profile-img {
@@ -92,14 +91,17 @@ h2 {
   margin-bottom: 16px;
 }
 
-.tags span {
-  background: #238636;
+.tags img {
   color: white;
-  font-size: 12px;
-  padding: 4px 10px;
-  border-radius: 12px;
-  margin: 4px;
-  display: inline-block;
+  font-size: 14px;      
+  width: 330px;
+  alignment-baseline: middle;    
+  margin: 0 auto;
+  padding: 4px 8px;       
+  border-radius: 8px;
+  background-color: rgba(88, 166, 255, 0.2);    
+
+  
 }
 
 .socials {
@@ -136,7 +138,8 @@ h2 {
     background-color: #3a3a3a4f;
     color: #f0f0f0;
     padding: 12px 20px;
-    border-radius: 25px;
+    border-radius: 30px;
+    border: 1px solid aliceblue;
     margin-top: 20px;
     display: inline-block;
     text-decoration: none;
@@ -165,7 +168,14 @@ h2 {
     .description {
         font-size: 12px;
     }
-
+    .tags img {
+        width: 90%;
+        padding: 1px 2px;
+        font-size: 12px;
+        border-radius: 6px;
+        background-color: rgba(88, 166, 255, 0.2);
+      
+    }
 
     .profile-img {
         width: 80px;
@@ -180,5 +190,4 @@ h2 {
     .description {
         font-size: 12px;
     }
-
 }
