--- a/style.css
+++ b/style.css
@@ -90,6 +90,11 @@ h2 {
   color: #c9d1d9;
   margin-bottom: 16px;
 }
+.tags p {
+  font-size: 14px;
+  margin-bottom: 8px;
+  padding: 20px 0;
+}
 
 .tags img {
   color: white;
@@ -100,8 +105,6 @@ h2 {
   padding: 4px 8px;       
   border-radius: 8px;
   background-color: rgba(88, 166, 255, 0.2);    
-
-  
 }
 
 .socials {
