--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ body::before {
 }
 
 .card {
-  background-color: rgba(22, 27, 34, 0.637); /* más transparente */
+  background-color: rgba(22, 27, 34, 0.288); /* más transparente */
   border-radius: 16px;
-  box-shadow: 0 0 20px rgba(124, 196, 230, 0.527);
+  box-shadow: 0 0 20px rgba(185, 131, 221, 0.527);
   padding: 35px;
   width: 460px;
   text-align: center;
@@ -91,9 +91,11 @@ h2 {
   margin-bottom: 16px;
 }
 .tags p {
-  font-size: 14px;
+  font-size: 18px;
   margin-bottom: 8px;
-  padding: 20px 0;
+  padding: 10px 0;background: linear-gradient(to right, #A64AC9 ,#00BFFF );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .tags img {
@@ -105,6 +107,7 @@ h2 {
   padding: 4px 8px;       
   border-radius: 8px;
   background-color: rgba(88, 166, 255, 0.2);    
+    padding: 10px ;
 }
 
 .socials {
