--- a/style.css
+++ b/style.css
@@ -17,30 +17,26 @@ body {
   width: 100%;
   overflow: hidden;
   position: relative;
-
-}.card {
-
-  background-color: rgba(22, 27, 34, 0.288); /* más transparente */
+}
+.card {
+   background-color: rgba(22, 27, 34, 0.288); /* más transparente */
   border-radius: 16px;
   box-shadow: 0 0 20px rgba(124, 196, 230, 0.603);
   text-align: center;
   padding: 13px;
   width: 45%;
-  margin-top: 1.5%;
-
+  margin-top: 1.5%
 }
 
-
-
 .card:hover {
-  transform: translateY(-10px); /* Mueve la tarjeta ligeramente hacia arriba */
-  box-shadow: 0 0 30px rgba(124, 196, 230, 0.8); /* Cambia la sombra al pasar el cursor */
+  transform: translateY(-10px);
+  box-shadow: 0 0 30px rgba(124, 196, 230, 0.8); 
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .card img:hover {
-  transform: scale(1.1); /* Escala la imagen al pasar el cursor */
-transition: transform 0.3s cubic-bezier(0.4, 0, 1, 1);
+  transform: scale(1.1); 
+  transition: transform 0.3s cubic-bezier(0.4, 0, 1, 1);
 }
 
 .profile-img {
@@ -77,7 +73,8 @@ h2 {
 .tags p {
   font-size: 18px;
   margin-bottom: 8px;
-  padding: 10px 0;background: linear-gradient(to right, #A64AC9 ,#00BFFF );
+  padding: 10px 0;
+  background: linear-gradient(to right, #A64AC9 ,#00BFFF );
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -86,14 +83,12 @@ h2 {
 
 .tags img {
   color: white;
-  font-size: 14px;      
-  width: 330px;
-  alignment-baseline: middle;    
-  margin: 0 auto;
-  padding: 4px 8px;       
+  font-size: 14px;
+  width: 85%;
+  padding: 6px;
+  margin: 6px auto;
   border-radius: 8px;
-  background-color: rgba(88, 166, 255, 0.2);    
-    padding: 10px ;
+  background-color: rgba(88, 166, 255, 0.2);
 }
 
 .socials {
@@ -121,8 +116,8 @@ h2 {
 }
 
 .socials a:hover img {
-  transform: scale(1.1); /* Escala un poco más el icono */
-  filter: brightness(1.3); /* Añadir brillo cuando se pasa el cursor */
+  transform: scale(1.1); 
+  filter: brightness(1.3); 
   transition: transform 0.3s ease, filter 0.3s ease;
 }
 
@@ -138,51 +133,9 @@ h2 {
     font-weight: bold;
     transition: background-color 0.3s ease;
 }
+
 .contact-btn a:hover {
     background-color: #58e6ff59;
-}
-
-@media screen and (max-width: 500px), screen and (max-width: 768px) {
-    .card {
-        width: 85%; /* Ajustar el ancho de la tarjeta en pantallas más pequeñas */
-        padding: 4.4%; /* Reducir el padding */
-    }
-    
-    .profile-img {
-        width: 94px;
-        height: 31px;
-    }
-    h2 {
-        font-size: 20px;
-    }
-    .subtitle {
-        font-size: 16px;
-    }
-    .description {
-        font-size: 12px;
-    }
-    .tags img {
-        width: 90%;
-        padding: 1px 2px;
-        font-size: 12px;
-        border-radius: 6px;
-        background-color: rgba(88, 166, 255, 0.2);
-      
-    }
-
-    .profile-img {
-        width: 80px;
-        height: 80px;
-    }
-    h2 {
-        font-size: 20px;
-    }
-    .subtitle {
-        font-size: 16px;
-    }
-    .description {
-        font-size: 12px;
-    }
 }
 
 body::before {
@@ -197,6 +150,45 @@ body::before {
   animation: moveStars 100s linear infinite;
   z-index: -1;
 }
+
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: 90%; 
+        padding: 4.4%;
+    }
+    
+    .profile-img {
+        width: 20vw;
+        height: 20vw;
+        max-width: 80px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    .subtitle {
+        font-size: 16px;
+    }
+
+    .description {
+        font-size: 12px;
+    }
+
+    .tags img {
+        width: 90%;
+        padding: 6px;
+        font-size: 12px;
+        border-radius: 6px;
+    }
+
+    .contact-btn a {
+        padding: 10px 18px;
+    }
+}
+
+
 
 @keyframes moveStars {
   from {
