--- a/style.css
+++ b/style.css
@@ -151,51 +151,45 @@ body::before {
   z-index: -1;
   
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 500px), screen and (max-width: 768px) {
     .card {
-        width: 90%; 
-        padding: 4.4%;
+        width: 85%; /* Ajustar el ancho de la tarjeta en pantallas más pequeñas */
+        padding: 4.4%; /* Reducir el padding */
     }
-    
     .profile-img {
-        width: 20vw;
-        height: 20vw;
-        max-width: 80px;
+        width: 94px;
+        height: 31px;
     }
-
     h2 {
         font-size: 20px;
     }
-
     .subtitle {
         font-size: 16px;
     }
-
     .description {
         font-size: 12px;
     }
-
     .tags img {
         width: 90%;
-        padding: 6px;
+        padding: 1px 2px;
         font-size: 12px;
         border-radius: 6px;
+        background-color: rgba(88, 166, 255, 0.2);
+      
     }
 
-    .contact-btn a {
-        padding: 10px 18px;
+    .profile-img {
+        width: 80px;
+        height: 80px;
     }
-}
-
-
-
-@keyframes moveStars {
-  from {
-    transform: translateY(0);
-  }
-  to {
-    transform: translateY(-500px);
-  }
+    h2 {
+        font-size: 20px;
+    }
+    .subtitle {
+        font-size: 16px;
+    }
+    .description {
+        font-size: 12px;
+    }
 }
 
